--- a/client/components/Settings/Services/styles.scss
+++ b/client/components/Settings/Services/styles.scss
@@ -1,17 +1,27 @@
 @import '../../../ui.scss';
 
-
-.outerContainer{
-  height: 100%;
-}
 .servicesMainContainer {
   display: flex;
   height: 100%;
 }
+
 .servicesListContainer {
   display: inline-block;
   border-right: 1px solid;
   border-right-color: $primary-dark;
+  padding-top: 15px;
+  padding-left: 15px;
+}
+
+.modalContainer {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid;
+  border-bottom-color: $primary-grey;
+}
+
+.addServiceButton {
+  margin-left: auto;
 }
 
 .servicesListItem{
@@ -25,12 +35,10 @@
 .servicesDataContainer {
   display: inline-block;
   padding-left: 15px;
-
+  padding-top: 15px;
+  padding-right: 15px;
 }
 
-.addServiceButton {
-  margin-left: auto;
-}
 
 
 .serviceHeaderContainer{
@@ -39,13 +47,13 @@
   border-bottom: 1px solid;
   border-bottom-color: $primary-lightgrey;
 }
+
 .trashButton {
   margin-left: auto;
 }
 
 .formContainer {
   display: flex;
-
   &__createForm{
     padding: 0px 15px 5px 15px;
     height: 100%;
@@ -53,19 +61,12 @@
 }
 
 .servicesFormRow {
-  width: 100%;
+  width: 50%;
+  min-width: 100px;
   display: inline-block;
-
   &__createRow {
     padding: 15px 0px 15px 0px;
   }
-}
-
-.modalContainer {
-  display: flex;
-  align-items: center;
-  border-bottom: 1px solid;
-  border-bottom-color: $primary-grey;
 }
 
 
